Serilog replaced with Nlog 6

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -4,6 +4,15 @@
     "SeedKey": "Our true mentor in life is science. — Mustafa Kemal Atatürk"
   },
   "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "System.*": "Warning",
+      "Npgsql.*": "Warning",
+      "Microsoft.*": "Warning",
+      "Microsoft.Hosting.Lifetime*": "Information"
+    }
+  },
   "Kestrel": {
     "Docs": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints",
     "EndpointDefaults": {
@@ -24,37 +33,41 @@
   },
   "SaganStandard": "Extraordinary claims require extraordinary evidence",
   "PhilosophicalRazor": "What can be asserted without evidence can be dismissed without evidence",
-  "Serilog": {
-    "Docs": "https://github.com/serilog/serilog-settings-configuration",
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.Graylog"
-    ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft": "Warning",
-        "System": "Warning",
-        "Npgsql": "Warning"
+  "NLogDocs": [
+    "https://nlog-project.org/config",
+    "https://github.com/NLog/NLog.Web",
+    "https://github.com/NLog/NLog/wiki/Getting-started-with-ASP.NET-Core-6",
+    "https://github.com/NLog/NLog.Extensions.Logging/wiki/NLog-configuration-with-appsettings.json",
+    "https://github.com/NLog/NLog/wiki/Configure-from-code",
+    "https://github.com/NLog/NLog/wiki/Register-your-custom-component",
+    "https://github.com/NLog/NLog/wiki/How-to-use-structured-logging",
+    "When deploying Graylog within a service mesh like Linkerd, it’s recommended to use Graylog’s HTTP input. Linkerd automatically secures all TCP traffic—including HTTP/2—between meshed pods using mutual TLS (mTLS), ensuring that log data is encrypted end-to-end in transit."
+  ],
+  "NLog": {
+    "throwConfigExceptions": true,
+    "targets": {
+      "async": true,
+      "console": {
+        "type": "ColoredConsole",
+        "layout": "[BEGIN ${date:format=HH\\:mm\\:ss.fffffff} ${level:format=Name:padding=-3:uppercase=true} ${logger}]${newline}${message}${newline}[END ${date:format=HH\\:mm\\:ss.fffffff} ${level:format=Name:padding=-3:uppercase=true} ${logger}]${newline}"
+      },
+      "graylog-udp": {
+        "type": "Gelf",
+        "address": "udp://localhost:12201",
+        "compress": "GZip"
+      },
+      "graylog-http": {
+        "type": "Gelf",
+        "address": "http://localhost:12201/gelf",
+        "lineEnding": "LF",
+        "compress": "GZip"
       }
     },
-    "WriteTo": [
+    "rules": [
       {
-        "Name": "Console",
-        "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[BEGIN {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}{Message:lj}{NewLine}[END {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}"
-        }
-      },
-      {
-        "Name": "Graylog",
-        "Args": {
-          "hostnameOrAddress": "localhost",
-          "port": "12201",
-          "transportType": "Udp",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
-        }
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "console, graylog-http"
       }
     ]
   }
