--- a/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
+++ b/DRN.Framework.Hosting/DRN.Framework.Hosting.csproj
@@ -55,9 +55,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.7" />
         <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.1.0" />
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1"/>
+        <PackageReference Include="NLog.Targets.Network" Version="6.0.2" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="6.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
     </ItemGroup>
     
