docker images updateds + nexus serilog config fixed

--- a/DRN.Nexus.Hosted/appsettings.json
+++ b/DRN.Nexus.Hosted/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ApplicationName":"DRN Nexus",
+  "ApplicationName": "DRN Nexus",
   "AllowedHosts": "*",
   "Kestrel": {
     "Docs": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel/endpoints",
@@ -19,36 +19,31 @@
     "ServicesStopConcurrently": true,
     "BackgroundServiceExceptionBehavior": "StopHost"
   },
-  "Serilog": {
-    "Docs": "https://github.com/serilog/serilog-settings-configuration",
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.Graylog"
-    ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft": "Warning",
-        "System": "Warning",
-        "Npgsql": "Warning"
+  "NLog": {
+    "throwConfigExceptions": true,
+    "targets": {
+      "async": true,
+      "console": {
+        "type": "ColoredConsole",
+        "layout": "[BEGIN ${date:format=HH\\:mm\\:ss.fffffff} ${level:format=Name:padding=-3:uppercase=true} ${logger}]${newline}${message}${newline}[END ${date:format=HH\\:mm\\:ss.fffffff} ${level:format=Name:padding=-3:uppercase=true} ${logger}]${newline}"
+      },
+      "graylog-udp": {
+        "type": "Gelf",
+        "address": "udp://localhost:12201",
+        "compress": "GZip"
+      },
+      "graylog-http": {
+        "type": "Gelf",
+        "address": "http://localhost:12201/gelf",
+        "lineEnding": "LF",
+        "compress": "GZip"
       }
     },
-    "WriteTo": [
+    "rules": [
       {
-        "Name": "Console",
-        "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "[BEGIN {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}{Message:lj}{NewLine}[END {Timestamp:HH:mm:ss.fffffff} {Level:u3} {SourceContext}]{NewLine}"
-        }
-      },
-      {
-        "Name": "Graylog",
-        "Args": {
-          "hostnameOrAddress": "localhost",
-          "port": "12201",
-          "transportType": "Udp"
-        }
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "console, graylog-http"
       }
     ]
   }
