--- a/Sample.Utils/Sample.Utils.csproj
+++ b/Sample.Utils/Sample.Utils.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\DRN.Framework.Utils\DRN.Framework.Utils.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.7" />
+  </ItemGroup>
+
 </Project>
