--- a/DRN.Framework.MassTransit/DRN.Framework.MassTransit.csproj
+++ b/DRN.Framework.MassTransit/DRN.Framework.MassTransit.csproj
@@ -11,6 +11,7 @@
         <PackageId>DRN.Framework.MassTransit</PackageId>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
