--- a/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
+++ b/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
@@ -11,6 +11,7 @@
         <PackageId>DRN.Framework.SharedKernel</PackageId>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
