xml comment build fixes

--- a/DRN.Framework.Jobs/DRN.Framework.Jobs.csproj
+++ b/DRN.Framework.Jobs/DRN.Framework.Jobs.csproj
@@ -12,6 +12,7 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
     
     <ItemGroup>
