--- a/DRN.Framework.Testing/DRN.Framework.Testing.csproj
+++ b/DRN.Framework.Testing/DRN.Framework.Testing.csproj
@@ -14,6 +14,10 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <IncludeSource>true</IncludeSource>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
 
