--- a/.github/workflows/actions/docker-publish-all/action.yml
+++ b/.github/workflows/actions/docker-publish-all/action.yml
@@ -8,12 +8,12 @@ runs:
   using: "composite"
   steps:
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@6524bf65af31da8d45b59e8c27de4bd072b392f5
+      uses: docker/setup-buildx-action@v3
       with:
         platforms: linux/amd64,linux/arm64
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
-      uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
+      uses: docker/login-action@v3
       with:
         username: ${{ inputs.username }}
         password: ${{ inputs.password }}
