--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -49,11 +49,11 @@ jobs:
         uses: ./.github/workflows/actions/nuget-publish-all
         
       - name: Generate artifact attestation #https://andrewlock.net/creating-provenance-attestations-for-nuget-packages-in-github-actions/
-        uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2 # v2.2.3
+        uses: actions/attest-build-provenance@v2
         with:
           subject-path: 'artifacts/packages/*.nupkg'
 
-      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      - uses: actions/upload-artifact@v4
         with:
           name: packages
           path: artifacts/packages
