SourceKnownRepository - AnyAsync Added CreateSubType && CreateSubTypes added to Type Extensions DrnProgramActions  - Added to hosting project Hosted Project's Drn.Framework.Testing dependencies limited to Debug builds NSubstitute.Analyzers.CSharp dependency moved into tesDrn.Framework.Testing Dependencies updated + code cleanup

--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -9,8 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-        <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" PrivateAssets="none"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" PrivateAssets="none"/>
     </ItemGroup>
 
     <ItemGroup>
