--- a/DRN.Framework.Testing/DRN.Framework.Testing.csproj
+++ b/DRN.Framework.Testing/DRN.Framework.Testing.csproj
@@ -50,11 +50,11 @@
         <PackageReference Include="AwesomeAssertions" Version="9.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8" />
         <PackageReference Include="NSubstitute" Version="5.3.0" />
-        <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.19" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0" />
         <PackageReference Include="Testcontainers.RabbitMq" Version="4.6.0" />
         <PackageReference Include="xunit" Version="2.9.3" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3" PrivateAssets="none" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" PrivateAssets="none" />
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" PrivateAssets="none"/>
     </ItemGroup>
 
     <ItemGroup>
