--- a/DRN.Test.Unit/DRN.Test.Unit.csproj
+++ b/DRN.Test.Unit/DRN.Test.Unit.csproj
@@ -9,10 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-        <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" PrivateAssets="none"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" PrivateAssets="none"/>
     </ItemGroup>
-
+    
     <ItemGroup>
         <ProjectReference Include="..\DRN.Framework.Testing\DRN.Framework.Testing.csproj"/>
         <ProjectReference Include="..\DRN.Nexus.Hosted\DRN.Nexus.Hosted.csproj" />
