--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -1,11 +1,13 @@
 ﻿{
-  "DrnAppFeatures": {
-    "AutoMigrateDevEnvironment": true,
-    "LaunchExternalDependencies": true,
-    "InternalRequestHttpVersion": "1.1",
-    "PrototypingMode": false
-  },
   "NexusAppSettings": {
     "Address": "localhost:5988"
+  },
+  "DrnAppFeatures": {
+    "InternalRequestHttpVersion": "1.1"
+  },
+  "DrnDevelopmentSettings": {
+    "AutoMigrateDevEnvironment": true,
+    "LaunchExternalDependencies": true,
+    "PrototypingMode": false
   }
 }
