Default environment value made explicit. Configuration tests refactored

--- a/DRN.Nexus.Hosted/appsettings.json
+++ b/DRN.Nexus.Hosted/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  "Environment": "Development",
+  "EnvironmentNote": "Default environment made explicit it should be overridden by environment variables, mounted settings or nexus",
   "ApplicationName": "DRN Nexus",
   "AllowedHosts": "*",
   "Kestrel": {
