--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  "Environment": "Development",
+  "EnvironmentNote": "Default environment made explicit it should be overridden by environment variables, mounted settings or nexus",
   "ApplicationName": "DRN Sample",
   "DrnAppFeatures": {
     "SeedKey": "Our true mentor in life is science. — Mustafa Kemal Atatürk"
