Sourceknown repository count async added, any async improved. Sonar fixes + AutoMigrateDevEnvironment simplified

--- a/DRN.Nexus.Hosted/appsettings.Development.json
+++ b/DRN.Nexus.Hosted/appsettings.Development.json
@@ -1,9 +1,11 @@
 ﻿{
   "DrnAppFeatures": {
-    "AutoMigrateDevEnvironment": true,
-    "LaunchExternalDependencies": true,
-    "UseHttpRequestLogger": true,
     "InternalRequestHttpVersion": "1.1",
     "NexusAddress": "localhost:5988"
+  },
+  "DrnDevelopmentSettings": {
+    "AutoMigrate": true,
+    "LaunchExternalDependencies": true,
+    "PrototypingMode": false
   }
 }
