--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -6,7 +6,7 @@
     "InternalRequestHttpVersion": "1.1"
   },
   "DrnDevelopmentSettings": {
-    "AutoMigrateDevEnvironment": true,
+    "AutoMigrate": true,
     "LaunchExternalDependencies": true,
     "PrototypingMode": false
   }
