--- a/Sample.Hosted/package.json
+++ b/Sample.Hosted/package.json
@@ -1,10 +1,27 @@
 {
+  "name": "sample.hosted",
+  "private": true,
+  "version": "0.0.1",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "vite build",
+    "build:bootstrap": "BUILD_TYPE=bootstrap vite build",
+    "build:app": "BUILD_TYPE=app vite build"
+  },
+  "type": "module",
   "dependencies": {
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "htmx.org": "^2.0.6",
+    "htmx.org": "^2.0.7",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0",
     "jquery-validation-unobtrusive": "^4.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.34.0",
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0",
+    "sass": "^1.92.1",
+    "vite": "^7.1.5"
   }
 }
