--- a/Sample.Hosted/package.json
+++ b/Sample.Hosted/package.json
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "htmx.org": "^2.0.7",
@@ -18,10 +19,11 @@
     "jquery-validation-unobtrusive": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
-    "eslint": "^9.34.0",
-    "globals": "^16.3.0",
-    "sass": "^1.92.1",
-    "vite": "^7.1.5"
+    "@eslint/js": "^9.36.0",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
+    "sass": "^1.93.0",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.6"
   }
 }
