--- a/Sample.Hosted/wwwroot/app/.vite/manifest.json
+++ b/Sample.Hosted/wwwroot/app/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "buildwww/app/css/app.css": {
-    "file": "app.oS4Ouav3.css",
+    "file": "app.oS4Ouav349Ps.css",
     "src": "buildwww/app/css/app.css",
     "isEntry": true,
     "names": [
@@ -8,13 +8,13 @@
     ]
   },
   "buildwww/app/js/app_postload.js": {
-    "file": "app_postload.DqKm_zSp.js",
+    "file": "app_postload.DqKm_zSpcTBP.js",
     "name": "app_postload",
     "src": "buildwww/app/js/app_postload.js",
     "isEntry": true
   },
   "buildwww/app/js/app_preload.js": {
-    "file": "app_preload.XGORZqF1.js",
+    "file": "app_preload.XGORZqF1plWz.js",
     "name": "app_preload",
     "src": "buildwww/app/js/app_preload.js",
     "isEntry": true
