--- a/Sample.Hosted/Sample.Hosted.csproj
+++ b/Sample.Hosted/Sample.Hosted.csproj
@@ -19,8 +19,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="9.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="9.0.9"/>
         <PackageReference Include="QRCoder" Version="1.6.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="buildwww\**\*" CopyToOutputDirectory="Never"/>
+        <Content Update="buildwww\lib\Htmx\safe-nonce.rscDWfKx.js">
+          <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+          <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
