--- a/Sample.Hosted/wwwroot/lib/bootstrap/.vite/manifest.json
+++ b/Sample.Hosted/wwwroot/lib/bootstrap/.vite/manifest.json
@@ -1,12 +1,12 @@
 {
   "buildwww/lib/bootstrap/bootstrap.js": {
-    "file": "bootstrap_bundle.B2XzU81l.js",
+    "file": "bootstrap_bundle.B2XzU81llMgE.js",
     "name": "bootstrap_bundle",
     "src": "buildwww/lib/bootstrap/bootstrap.js",
     "isEntry": true
   },
   "buildwww/lib/bootstrap/bootstrap.scss": {
-    "file": "bootstrap.B41OMi6_.css",
+    "file": "bootstrap.B41OMi6_xJBa.css",
     "src": "buildwww/lib/bootstrap/bootstrap.scss",
     "isEntry": true,
     "names": [
