--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -59,6 +59,8 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.9" />
+        <PackageReference Include="System.IO.Hashing" Version="9.0.9" />
+        <PackageReference Include="System.Memory.Data" Version="9.0.9" />
         <!-- Transitive vulnerable packages overriden  -->
         <PackageReference Include="System.Net.Http" Version="4.3.4"/>
         <PackageReference Include="System.Private.Uri" Version="4.3.2"/>
