cookie names refactored according to new hash structure + new tests

--- a/DRN.Test.Unit/DRN.Test.Unit.csproj
+++ b/DRN.Test.Unit/DRN.Test.Unit.csproj
@@ -28,6 +28,9 @@
       <None Update="Tests\Framework\Hosting\MountDir\key-per-file-settings\postgres-password">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Tests\Framework\Utils\Encodings\Data\HelloWorld.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
