Code refactor + cleanup + nuget updates + tests fixed

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -3,7 +3,7 @@
   "EnvironmentNote": "Default environment made explicit it should be overridden by environment variables, mounted settings or nexus",
   "ApplicationName": "DRN Sample",
   "DrnAppFeatures": {
-    "SeedKey": "Our true mentor in life is science. — Mustafa Kemal Atatürk"
+    "SeedKey": "Our true mentor in life is science! - Mustafa Kemal Atatürk (1924)"
   },
   "AllowedHosts": "*",
   "HostOptions": {
