+ SourceKnownEntity GetForeignId and SourceKnownRepository ValidateEntityId methods renamed as GetEntityId + nuget and npm package updates + Vite.config.js documentation added to layout base + namespace refactor

--- a/DRN.Test.Performance/DRN.Test.Performance.csproj
+++ b/DRN.Test.Performance/DRN.Test.Performance.csproj
@@ -6,8 +6,10 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <NoWarn>$(NoWarn);NU1608</NoWarn>
     </PropertyGroup>
 
+    
     <ItemGroup>
         <PackageReference Include="BenchmarkDotNet" Version="0.15.4" />
         <PackageReference Include="Blake3" Version="2.0.0" />
