--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -3,7 +3,8 @@
     "Address": "localhost:5988"
   },
   "DrnAppFeatures": {
-    "InternalRequestHttpVersion": "1.1"
+    "InternalRequestHttpVersion": "1.1",
+    "SeedKey": "Our true mentor in life is science! - Mustafa Kemal Atatürk (1924)"
   },
   "DrnDevelopmentSettings": {
     "AutoMigrate": true,
