prototyping mode flag renamed as prototype + environment flags added to action bar

--- a/DRN.Framework.Utils/DRN.Framework.Utils.csproj
+++ b/DRN.Framework.Utils/DRN.Framework.Utils.csproj
@@ -46,6 +46,7 @@
         <InternalsVisibleTo Include="DRN.Test"/>
         <InternalsVisibleTo Include="DRN.Test.Unit"/>
         <InternalsVisibleTo Include="DRN.Test.Performance"/>
+        <InternalsVisibleTo Include="DRN.Framework.EntityFramework"/>
         <InternalsVisibleTo Include="DRN.Framework.Hosting"/>
         <InternalsVisibleTo Include="DRN.Framework.Testing"/>
     </ItemGroup>
