--- a/DRN.Nexus.Hosted/appsettings.Development.json
+++ b/DRN.Nexus.Hosted/appsettings.Development.json
@@ -4,8 +4,8 @@
     "NexusAddress": "localhost:5988"
   },
   "DrnDevelopmentSettings": {
+    "Prototype": true,
     "AutoMigrate": true,
-    "LaunchExternalDependencies": true,
-    "PrototypingMode": false
+    "LaunchExternalDependencies": true
   }
 }
