--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -7,8 +7,8 @@
     "SeedKey": "Our true mentor in life is science! - Mustafa Kemal Atatürk (1924)"
   },
   "DrnDevelopmentSettings": {
+    "Prototype": true,
     "AutoMigrate": true,
-    "LaunchExternalDependencies": true,
-    "PrototypingMode": false
+    "LaunchExternalDependencies": true
   }
 }
