--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -7,7 +7,7 @@
     "SeedKey": "Our true mentor in life is science! - Mustafa Kemal Atatürk (1924)"
   },
   "DrnDevelopmentSettings": {
-    "Prototype": true,
+    "Prototype": false,
     "AutoMigrate": true,
     "LaunchExternalDependencies": true
   }
