--- a/.github/workflows/actions/dotnet-build-release/action.yml
+++ b/.github/workflows/actions/dotnet-build-release/action.yml
@@ -9,4 +9,4 @@ runs:
       uses: ./.github/workflows/actions/scan-nuget-vulnerabilities
     - name: Build solution
       shell: bash
-      run: dotnet build DRN.slnx --no-restore --no-incremental --configuration Release /p:Version=${VERSION}
+      run: dotnet build DRN.slnx --no-restore --no-incremental --configuration Release -p:Version="${VERSION}" -p:ContinuousIntegrationBuild=true
