--- a/.github/workflows/actions/dotnet-build/action.yml
+++ b/.github/workflows/actions/dotnet-build/action.yml
@@ -9,4 +9,4 @@ runs:
       uses: ./.github/workflows/actions/scan-nuget-vulnerabilities
     - name: Build solution
       shell: bash
-      run: dotnet build DRN.slnx --no-restore --no-incremental
+      run: dotnet build DRN.slnx --no-restore --no-incremental -p:ContinuousIntegrationBuild=true
