--- a/Sample.Hosted/wwwroot/lib/htmx/.vite/manifest.json
+++ b/Sample.Hosted/wwwroot/lib/htmx/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "buildwww/lib/htmx/htmx_bundle.js": {
-    "file": "htmx_bundle.COIAdu_eHIqMlmRm.js",
+    "file": "htmx_bundle.CnZF9kopuHFR5X5W.js",
     "name": "htmx_bundle",
     "src": "buildwww/lib/htmx/htmx_bundle.js",
     "isEntry": true
