localization support added + code refactor

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -69,5 +69,13 @@
         "writeTo": "console, graylog-http"
       }
     ]
+  },
+  "DrnLocalizationSettings": {
+    "SupportedCultures": [
+      "tr",
+      "en",
+      "de-CH"
+    ],
+    "DefaultCulture": "en"
   }
 }
