appsettings.json reorganized

--- a/Sample.Hosted/appsettings.json
+++ b/Sample.Hosted/appsettings.json
@@ -21,8 +21,14 @@
       }
     }
   },
-  "SaganStandard": "Extraordinary claims require extraordinary evidence",
-  "PhilosophicalRazor": "What can be asserted without evidence can be dismissed without evidence",
+  "DrnLocalizationSettings": {
+    "SupportedCultures": [
+      "tr",
+      "en",
+      "de-CH"
+    ],
+    "DefaultCulture": "en"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -70,12 +76,6 @@
       }
     ]
   },
-  "DrnLocalizationSettings": {
-    "SupportedCultures": [
-      "tr",
-      "en",
-      "de-CH"
-    ],
-    "DefaultCulture": "en"
-  }
+  "SaganStandard": "Extraordinary claims require extraordinary evidence",
+  "PhilosophicalRazor": "What can be asserted without evidence can be dismissed without evidence"
 }
