--- a/DRN.Framework.Testing/DRN.Framework.Testing.csproj
+++ b/DRN.Framework.Testing/DRN.Framework.Testing.csproj
@@ -46,13 +46,13 @@
 
     <ItemGroup>
         <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1"/>
-        <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1"/>
+        <PackageReference Include="AutoFixture.Xunit3" Version="4.19"/>
         <PackageReference Include="AwesomeAssertions" Version="9.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.10" />
         <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.8.1" />
         <PackageReference Include="Testcontainers.RabbitMq" Version="4.8.1" />
-        <PackageReference Include="xunit" Version="2.9.3" />
+        <PackageReference Include="xunit.v3.extensibility.core" Version="3.2.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5" PrivateAssets="none" />
         <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" PrivateAssets="none"/>
     </ItemGroup>
