--- a/Docker/Rabbitmq/docker-compose.yml
+++ b/Docker/Rabbitmq/docker-compose.yml
@@ -2,7 +2,7 @@ name: drn-rabbit
 services:
   # https://hub.docker.com/_/rabbitmq
   rabbit:
-    image: ${DOCKER_REGISTRY-}rabbit:4.1.0
+    image: ${DOCKER_REGISTRY-}rabbit:4.2.0-management-alpine
     build:
       context: ./image/
     container_name: drn-rabbit
