DrnDevelopmentSettings BreakForUserUnhandledException flag added

--- a/Sample.Hosted/appsettings.Development.json
+++ b/Sample.Hosted/appsettings.Development.json
@@ -9,6 +9,7 @@
   "DrnDevelopmentSettings": {
     "Prototype": true,
     "AutoMigrate": true,
-    "LaunchExternalDependencies": true
+    "LaunchExternalDependencies": true,
+    "BreakForUserUnhandledException": false
   }
 }
