--- a/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
+++ b/DRN.Framework.EntityFramework/DRN.Framework.EntityFramework.csproj
@@ -35,11 +35,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10" PrivateAssets="none" />
-        <PackageReference Include="Npgsql.DependencyInjection" Version="9.0.4" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-        <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0" PrivateAssets="none" />
+        <PackageReference Include="Npgsql.DependencyInjection" Version="10.0.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+        <PackageReference Include="EFCore.NamingConventions" Version="10.0.0-rc.2" />
     </ItemGroup>
 
     <Target Name="PrepareDescription" BeforeTargets="GenerateNuspec">
