--- a/.github/workflows/actions/dotnet-test/action.yml
+++ b/.github/workflows/actions/dotnet-test/action.yml
@@ -4,7 +4,13 @@ runs:
   steps:
     - name: Test Unit
       shell: bash
-      run: dotnet test DRN.Test.Unit/DRN.Test.Unit.csproj --no-build --verbosity normal
+      env:
+        # Intentionally, telemetry is not disabled to support MS Testing Platform development in this CI pipeline
+        TESTINGPLATFORM_TELEMETRY_OPTOUT: '0'
+      run: dotnet run --project DRN.Test.Unit/DRN.Test.Unit.csproj --no-build --verbosity normal
     - name: Test Integration
       shell: bash
-      run: dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal
+      env:
+        # Intentionally, telemetry is not disabled to support MS Testing Platform development in this CI pipeline
+        TESTINGPLATFORM_TELEMETRY_OPTOUT: '0'
+      run: dotnet run --project DRN.Test/DRN.Test.csproj --no-build --verbosity normal
