xunit TestContext.Current.CancellationToken warning disabled

--- a/DRN.Test.Unit/DRN.Test.Unit.csproj
+++ b/DRN.Test.Unit/DRN.Test.Unit.csproj
@@ -8,6 +8,7 @@
         <IsTestProject>true</IsTestProject>
         <OutputType>Exe</OutputType>
         <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+        <NoWarn>$(NoWarn);xUnit1051</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
