initial migrations updated

--- a/Sample.Infra/Sample.Infra.csproj
+++ b/Sample.Infra/Sample.Infra.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Identity\Migrations\" />
     <Folder Include="QA\Migrations\" />
   </ItemGroup>
   
