--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,7 +35,7 @@ jobs:
         uses: ./.github/workflows/actions/dotnet-build
 
       - name: Test
-        run: ./.sonar/coverage/dotnet-coverage collect "dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal" -f xml -o "coverage.xml"
+        run: ./.sonar/coverage/dotnet-coverage collect "dotnet run --project DRN.Test/DRN.Test.csproj --no-build --verbosity normal" -f xml -o "coverage.xml"
 
       - name: Sonar Scan End
         uses: ./.github/workflows/actions/sonar-end
