native return url support added + bug fixes

--- a/DRN.Test.Performance/DRN.Test.Performance.csproj
+++ b/DRN.Test.Performance/DRN.Test.Performance.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-        <NoWarn>$(NoWarn);NU1608</NoWarn>
+        <NoWarn>$(NoWarn);NU1608;AD0001</NoWarn>
     </PropertyGroup>
 
     
