DrnApp javascript and layout improvements

--- a/Sample.Hosted/wwwroot/app/.vite/manifest.json
+++ b/Sample.Hosted/wwwroot/app/.vite/manifest.json
@@ -1,12 +1,12 @@
 {
   "buildwww/app/js/appPostload.js": {
-    "file": "app_postload.DcHcOhBx8Ak194gk.js",
+    "file": "app_postload.BdsMFJ3jCN-TjIIA.js",
     "name": "app_postload",
     "src": "buildwww/app/js/appPostload.js",
     "isEntry": true
   },
   "buildwww/app/js/appPreload.js": {
-    "file": "app_preload.CxkIeV6WajDVQZfS.js",
+    "file": "app_preload.CSmfmn1ET2_kgsXx.js",
     "name": "app_preload",
     "src": "buildwww/app/js/appPreload.js",
     "isEntry": true
